# RoutesApp

./: .py  .sql  pyproject.toml
jwt_certs/: jwt-private.pem  jwt-public.pem
src/: container.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_03_13_0237-5b06ceeb1327_.py  2025_03_13_1501-c3fa5d315331_.py  2025_03_13_1549-b28797579405_.py  2025_03_13_1552-013b90af84ea_.py
src/api/v1/: __init__.py  auth.py  protocols.py  route.py
src/apps/auth/application/: container.py  dto.py  protocols.py
src/apps/auth/application/managers/: user_manager.py
src/apps/auth/application/usecases/: get_me_usecase.py  login_usecase.py  logout_usecase.py  refresh_jwt_usecase.py  register_usecase.py
src/apps/auth/domain/: refresh_jwt.py  token.py  user.py
src/apps/auth/presentation/: __init__.py  container.py  get_me.py  get_user.py  login.py  logout.py  protocols.py  refresh_jwt.py  register.py  update_user.py
src/apps/routes/domain/: edge.py  point.py  route.py
src/core/: config.py  container.py  database.py  exceptions.py  schema.py  uow.py
src/core/middlewares/: protected_middleware.py
tests/: conftest.py
tests/unit/test_auth/: common.py
tests/unit/test_auth/mocks/: repositories.py  security.py  uow.py  usecases.py
tests/unit/test_auth/test_domain/: test_user.py
tests/unit/test_auth/test_presentations/: test_getme.py  test_login.py  test_logout.py  test_refresh.py  test_register.py
tests/unit/test_auth/test_usecases/: test_getme_usecase.py  test_login_usecase.py  test_logout_usecase.py  test_refresh_usecase.py  test_register_usecase.py
(+10 files in other folders)
